# MCP-PersonalCalendar

./: .gitignore  LICENSE  README.md  config.json  main.py  pyproject.toml
apis/: __init__.py  calendar_apis.py  event_apis.py  todo_apis.py
entities/: calendar_info.py  exceptions.py
utils/: functions.py
