[project]
name = "mcp-personalcalendar"
version = "1.2.0-beta2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "caldav>=2.2.3",
    "toml>=0.10.2"
]
[build-system]
requires= ["setuptools"]
build-backend= "setuptools.build"

[tool.setuptools.packages.find]
where = ["."]
